fix autocomplete z-index issue

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -498,7 +498,6 @@ CONTENT_PADDING_TOP = 35px
   border: 1px solid rgba(0, 0, 0, .1)
   border-radius: 6px
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, .05)
-  position: relative
   margin-left: 10px
   margin-right: (SIDEBAR_WIDTH + SIDEBAR_MARGIN_LEFT + SIDEBAR_MARGIN_RIGHT)
   padding: CONTENT_PADDING_TOP 50px 50px 50px
